# smsgw-tg-amqp

./: .gitignore  Cargo.toml  README.md  Settings.toml.example
src/: main.rs
src/amqp_consumer/: mod.rs
src/amqp_provider/: mod.rs
src/tg/: builder.rs  mod.rs
