[package]
name = "smsgw-tg-amqp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
stderrlog = "0.5"
config = "0.13"
regex = "*"
lapin = "2"
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
futures-lite = "1"
